# csv-script

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/csv_script/: main.py  reader.py
src/csv_script/reports/: __init__.py  average_gdp.py  registry.py
tests/: conftest.py  test_average_gdp.py  test_main.py  test_reader.py  test_registry.py
